@@ -77,6 +77,7 @@
 - Unicode: Update UTF-8 to UTF-16 conversion to match RFC 3629
 - User Options: Added error message when mixing --username and --show to warn users of exponential delay
 - MetaMask: update extraction tool to support MetaMask Mobile wallets
+- Metal Backend: added workaround to prevent 'Infinite Loop' bug when build kernels
 
 * changes v6.2.5 -> v6.2.6
 
